# warmy-agent-test

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  start.sh
apps/admin-cli/: pyproject.toml
apps/admin-cli/src/agenttest_admin/: __init__.py  main.py
apps/admin-cli/tests/: test_main.py
apps/control-api/: AGENTS.md  alembic.ini  pyproject.toml
apps/control-api/migrations/: env.py  script.py.mako
apps/control-api/migrations/versions/: 0001_identity_projects_audit.py  0002_test_assets.py  0003_runs.py  0004_artifacts.py  0005_security_policy.py  0006_agent_version_fields.py  0007_phase5_8_new_tables.py  0008_p2_account_env_template.py  0008_user_settings_feedback.py  0009_project_model_configurations.py  0010_test_agent_sessions.py  0011_login_security_fields.py  0012_super_test_agent_orchestration.py  0013_executable_asset_contracts.py  0014_run_cases_execution_mode.py  0015_test_agent_chat_generations.py  0016_backfill_scorer_versions.py  0017_test_case_codex_explore_execution_mode.py  0018_run_case_evidence.py  0019_browser_profile_auth_state.py  0020_test_missions.py  0021_run_case_outcomes.py  0022_run_trust_loop.py  0023_align_audit_log_schema.py  0024_add_run_session_id.py  0025_artifact_project_scope.py  0026_login_throttles.py  0027_professional_test_management.py
apps/control-api/src/agenttest/: __init__.py  main.py
apps/control-api/src/agenttest/bootstrap/: agent_relationships.py  app.py  context.py  core_summaries.py  gate_evidence.py  model_registry.py  project_access.py  review_collector.py  run_source.py  security_target.py  settings.py  wiring.py
apps/control-api/src/agenttest/entrypoints/: import_browser_profiles.py
apps/control-api/src/agenttest/shared/: __init__.py
apps/control-api/tests/architecture/: test_core_pagination_contract.py  test_module_boundaries.py  test_production_truthfulness.py  test_source_compilation.py
apps/control-api/tests/contract/: test_agent_connection_api.py  test_agents_api.py  test_artifacts_api.py  test_audit_api.py  test_auth_api.py  test_browser_session_lease_api.py  test_credential_lease_api.py  test_dataset_import_preview_api.py  test_datasets_api.py  test_environment_versions_api.py  test_environments_api.py  test_feedback_api.py  test_health.py  test_model_configs_api.py  test_projects_api.py  test_reports_api.py  test_run_postprocessing_internal_api.py  test_run_trust_loop_api.py  test_runs_api.py  test_scorer_trial_api.py  test_super_agent_chat_api.py  test_test_missions_api.py  test_test_plan_readiness_api.py  test_test_plans_api.py  test_trace_diff_api.py  test_user_admin_api.py  test_user_settings_api.py
apps/control-api/tests/integration/: test_browser_profile_api.py  test_browser_profile_legacy_import.py  test_browser_profile_repository.py  test_database_constraints.py  test_executable_asset_migration.py  test_experiment_review_chain.py  test_login_throttle_repository.py  test_migrations.py  test_professional_asset_migration.py  test_release_decision_chain.py  test_run_constraints.py  test_run_evaluation_chain.py  test_run_execution_snapshot.py  test_security_asset_chain.py  test_tapnow_production_loop.py  test_trial_idempotency_concurrency.py
apps/control-api/tests/integration/audit/: test_audit_logging.py
apps/control-api/tests/integration/projects/: test_project_isolation.py
apps/control-api/tests/performance/: test_query_bounds.py
apps/control-api/tests/security/: test_session_security.py
apps/control-api/tests/unit/: test_local_env.py  test_p2_features.py  test_playwright_agents.py  test_settings.py
apps/control-api/tests/unit/agents/: test_agent_domain.py  test_agent_version_phase1.py  test_invocation_contract.py
apps/control-api/tests/unit/artifacts/: test_artifact_service.py  test_artifact_storage.py
apps/control-api/tests/unit/audit/: test_business_audit.py
apps/control-api/tests/unit/bootstrap/: __init__.py  test_composition.py  test_core_summary_reader.py
apps/control-api/tests/unit/browser_profiles/: test_auth_state_cipher.py  test_auth_state_service.py  test_browser_profile_domain.py  test_browser_profile_publication.py  test_browser_profile_router.py  test_browser_profile_runtime.py  test_browser_session_scope_reader.py
apps/control-api/tests/unit/datasets/: test_dataset_domain.py  test_generate_from_run.py  test_import_contract.py  test_professional_case_contract.py  test_trial_run.py
apps/control-api/tests/unit/diagnostics/: __init__.py  (+1 more)
plugins/canvas-agent/: .env.example  manifest.json  pyproject.toml
plugins/canvas-agent/src/agenttest_plugin_canvas/: __init__.py  adapter.py  tapnow.py
plugins/canvas-agent/tests/: test_tapnow_adapter.py
workers/api-runner/: pyproject.toml
workers/api-runner/src/agenttest_api_runner/: __init__.py  activities.py  adapter.py  artifact_uploader.py  browser_harness_activity.py  browser_sessions.py  callback.py  canvas_assertions.py  codex_browser_activity.py  contracts.py  credentials.py  deepeval_adapter.py  main.py  mission_activities.py  mission_contracts.py  mission_workflow.py  playwright_activity.py  postprocess_activities.py  postprocess_contracts.py  postprocess_workflow.py  reports.py  scorer_activities.py  tapnow_activity.py  target_chat.py  workflow.py
workers/api-runner/tests/: test_activity_evidence.py  test_adapter.py  test_artifact_uploader.py  test_browser_harness_activity.py  test_browser_sessions.py  test_callback.py  test_codex_browser_profile_chain.py  test_credential_leases.py  test_deepeval_adapter.py  test_harness_workflow_integration.py  test_invocation_contract.py  test_main.py  test_mission_workflow.py  test_playwright_activity.py  test_postprocess_workflow.py  test_protocol_execution.py  test_reports.py  test_tapnow_activity.py  test_tapnow_end_to_end.py  test_target_chat.py  test_workflow.py
workers/model-runner/: pyproject.toml
workers/model-runner/src/agenttest_model_runner/: __init__.py  activities.py  adapter.py  contracts.py  credentials.py  main.py  workflow.py
workers/model-runner/tests/: test_adapter.py
(+1685 files in other folders)
