[project]
name = "warmy-agent-test-workspace"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "browser-harness>=0.1.3",
    "python-multipart>=0.0.32",
]

[tool.uv.workspace]
members = [
  "apps/control-api",
  "apps/admin-cli",
  "workers/api-runner",
  "workers/model-runner",
  "plugins/canvas-agent",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
addopts = "-ra"
