[project]
name = "warmy-agent-test-workspace"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "agenttest-plugin-codex-browser",
    "browser-harness>=0.1.3",
    "python-multipart>=0.0.32",
]

[tool.uv.sources]
agenttest-plugin-codex-browser = { workspace = true }
agenttest-plugin-canvas = { workspace = true }

[tool.uv.workspace]
members = [
  "apps/control-api",
  "apps/admin-cli",
  "workers/api-runner",
  "workers/model-runner",
  "plugins/canvas-agent",
  "plugins/codex-browser",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib"
markers = [
  "integration: marks integration tests that exercise external processes or adapters",
]
