[project]
name = "warmy-agent-test-workspace"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "agenttest-plugin-codex-browser",
    "browser-harness>=0.1.5",
    "python-multipart>=0.0.32",
]

[tool.uv]
# browser-harness 0.1.5 still pins Pillow 12.2.0 even though its image helpers
# are compatible with the security-fixed 12.3.0 release.
override-dependencies = ["pillow==12.3.0"]

[tool.uv.sources]
agenttest-plugin-codex-browser = { workspace = true }
agenttest-plugin-canvas = { workspace = true }

[tool.uv.workspace]
members = [
  "apps/control-api",
  "apps/admin-cli",
  "workers/api-runner",
  "workers/model-runner",
  "plugins/canvas-agent",
  "plugins/codex-browser",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
# DeepEval is used as an evaluation library. Its auto-loaded pytest plugin imports
# project .env files during test startup and breaks the isolated test settings.
addopts = "-ra --import-mode=importlib -p no:deepeval"
markers = [
  "integration: marks integration tests that exercise external processes or adapters",
]
