[project]
name = "warmy-admin-cli"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "warmy-control-api",
]

[project.scripts]
agenttest-admin = "agenttest_admin.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttest_admin"]

[tool.uv.sources]
warmy-control-api = { workspace = true }
