[project]
name = "warmy-control-api"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic",
  "argon2-cffi",
  "asyncpg",
  "fastapi",
  "httpx",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "pydantic-settings",
  "sqlalchemy[asyncio]",
  "structlog",
  "uvicorn[standard]",
]

[dependency-groups]
dev = [
  "mypy",
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttest"]

[tool.mypy]
python_version = "3.12"
strict = true
