[project]
name = "warmy-control-api"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic",
  "argon2-cffi",
  "aiosqlite",
  "asyncpg",
  "cryptography==49.0.0",
  "fastapi",
  "httpx",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "playwright==1.61.0",
  "pydantic-settings",
  "sqlalchemy[asyncio]",
  "structlog",
  "temporalio==1.29.0",
  "uvicorn[standard]",
  "pydantic-ai>=2.9.0",
]

[dependency-groups]
dev = [
  "mypy",
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttest"]

[tool.mypy]
python_version = "3.12"
strict = true
