[project]
name = "agenttest-plugin-canvas"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttest_plugin_canvas"]
