[project]
name = "warmy-api-runner"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "httpx",
  "temporalio==1.29.0",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttest_api_runner"]

[tool.mypy]
python_version = "3.12"
strict = true
