[project]
name = "warmy-model-runner"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "cryptography==49.0.0",
  "httpx",
  "temporalio==1.29.0",
]

[dependency-groups]
dev = ["mypy", "pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttest_model_runner"]

[tool.mypy]
python_version = "3.12"
strict = true
